--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -30,6 +30,7 @@ install:
   - cmd: choco install --allow-empty-checksums xsltproc
   ### LINUX ###
   - sh: export PATH=$($LINUXPYTHON -m site --user-base):$($LINUXPYTHON -m site --user-base)/Scripts:$PATH
+  - sh: export $PYSITEDIR=$LINUXPYTHON -m site --user-site
   - sh: $LINUXPYTHON --version
   - sh: $LINUXPYTHON -m pip install --user -U pip setuptools wheel 
   - sh: $LINUXPYTHON -m pip install --user -U coverage==4.0.3 coveralls
@@ -119,7 +120,7 @@ build_script:
   # NOTE: running powershell from cmd on purpose because it formats the output
   # correctly
   - cmd: powershell -Command "& { if($env:COVERAGE -eq 1) { coverage run -p --rcfile=$($env:COVERAGE_PROCESS_START) runtest.py test/ENV.py} else { C:\\%WINPYTHON%\\python.exe runtest.py -j 2 test/ENV.py }; if($LastExitCode -eq 2 -Or $LastExitCode -eq 0) { $host.SetShouldExit(0 )} else {$host.SetShouldExit(1)}}"
-  - sh: if [ "$COVERAGE" -eq "1" ]; then coverage run -p --rcfile="$COVERAGE_PROCESS_START" runtest.py test/ENV.py || if [[ $? == 2 ]]; then true; else false; fi; else $LINUXPYTHON runtest.py -j 2 test/ENV.py || if [[ $? == 2 ]]; then true; else false; fi
+  - sh: if [ "$COVERAGE" -eq "1" ]; then coverage run -p --rcfile="$COVERAGE_PROCESS_START" runtest.py test/ENV.py || if [[ $? == 2 ]]; then true; else false; fi; else $LINUXPYTHON runtest.py -j 2 test/ENV.py || if [[ $? == 2 ]]; then true; else false; fi; fi
 
 on_success:
   - cmd: if %COVERAGE% equ 1 coverage combine
