use python from stack

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,14 +14,15 @@ cache:
 install:
   ### WINDOWS ###
   # add python and python user-base to path for pip installs
-  - cmd: "C:\\%WINPYTHON%\\python.exe --version"
-  - cmd: for /F "tokens=*" %%g in ('C:\\%WINPYTHON%\\python.exe -m site --user-base') do (set PYUSERBASESITE=%%g)
-  - cmd: for /F "tokens=*" %%g in ('C:\\%WINPYTHON%\\python.exe -m site --user-site') do (set PYSITEDIR=%%g)
+  - cmd: where python
+  - cmd: "python --version"
+  - cmd: for /F "tokens=*" %%g in ('python -m site --user-base') do (set PYUSERBASESITE=%%g)
+  - cmd: for /F "tokens=*" %%g in ('python -m site --user-site') do (set PYSITEDIR=%%g)
   - cmd: "set PATH=%PYUSERBASESITE%;%PYUSERBASESITE%\\%WINPYTHON%\\Scripts;%PYUSERBASESITE%\\Scripts;C:\\%WINPYTHON%;C:\\%WINPYTHON%\\Scripts;C:\\cygwin64\\bin;C:\\msys64;C:\\ProgramData\\chocolatey\\bin;%PATH%"
   - cmd: set
-  - cmd: "C:\\%WINPYTHON%\\python.exe -m pip install --user -U pip setuptools wheel"
-  - cmd: "C:\\%WINPYTHON%\\python.exe -m pip install --user -U pypiwin32 coverage coveralls"
-  - cmd: set STATIC_DEPS=true & C:\\%WINPYTHON%\\python.exe -m pip install --user -U lxml
+  - cmd: python -m pip install --user -U pip setuptools wheel
+  - cmd: python -m pip install --user -U pypiwin32 coverage coveralls
+  - cmd: set STATIC_DEPS=true & python -m pip install --user -U lxml
   # install 3rd party tools to test with
   - cmd: choco install --allow-empty-checksums dmd
   - cmd: choco install --allow-empty-checksums ldc
@@ -31,34 +32,30 @@ install:
   ### LINUX ###
   - sh: which python
   - sh: python --version
-  - sh: export PATH=$($LINUXPYTHON -m site --user-base):$($LINUXPYTHON -m site --user-base)/Scripts:$PATH
-  - sh: export PYSITEDIR=$($LINUXPYTHON -m site --user-site)
-  - sh: $LINUXPYTHON -m pip install --user -U pip setuptools wheel 
-  - sh: $LINUXPYTHON -m pip install --user -U coverage==4.0.3 coveralls
-  - sh: STATIC_DEPS=true & $LINUXPYTHON -m pip install --user -U lxml
+  - sh: export PATH=$(python -m site --user-base):$(python -m site --user-base)/Scripts:$PATH
+  - sh: export PYSITEDIR=$(python -m site --user-site)
+  - sh: python -m pip install --user -U pip setuptools wheel 
+  - sh: python -m pip install --user -U coverage==4.0.3 coveralls
+  - sh: STATIC_DEPS=true & python -m pip install --user -U lxml
 
 environment:
   COVERAGE: 0
   matrix:
     - WINPYTHON: "Python27"
-      LINUXPYTHON: "/usr/bin/python2.7"
       PYTHON: "2.7"
       BUILD_JOB_NUM: 1
       COVERAGE: 1
 
     - WINPYTHON: "Python36"
-      LINUXPYTHON: "/usr/bin/python3.6"
       PYTHON: "3.6"
       BUILD_JOB_NUM: 1
       COVERAGE: 1
 
     - WINPYTHON: "Python35"
-      LINUXPYTHON: "/usr/bin/python3.5"
       PYTHON: "3.5"
       BUILD_JOB_NUM: 1
 
     - WINPYTHON: "Python37"
-      LINUXPYTHON: "/usr/bin/python3.7"
       PYTHON: "3.7"
       BUILD_JOB_NUM: 1
 
@@ -100,8 +97,7 @@ before_build:
 build: off
 
 build_script:
-  - cmd: "C:\\%WINPYTHON%\\python.exe runtest.py -l -a > all_tests.txt"
-  - sh: $LINUXPYTHON runtest.py -l -a > all_tests.txt
+  - python runtest.py -l -a > all_tests.txt
   # setup coverage is set in environment
   - ps: |
       if ($env:COVERAGE -eq 1){ 
@@ -125,8 +121,8 @@ build_script:
       get-content all_tests.txt | select -first ($end - $start) -skip ($start - 1) | Out-File -Encoding ASCII build_tests.txt;
   # NOTE: running powershell from cmd on purpose because it formats the output
   # correctly
-  - cmd: powershell -Command "& { if($env:COVERAGE -eq 1) { coverage run -p --rcfile=$($env:COVERAGE_PROCESS_START) runtest.py test/ENV.py} else { C:\\%WINPYTHON%\\python.exe runtest.py -j 2 test/ENV.py }; if($LastExitCode -eq 2 -Or $LastExitCode -eq 0) { $host.SetShouldExit(0 )} else {$host.SetShouldExit(1)}}"
-  - sh: if [ "$COVERAGE" -eq "1" ]; then coverage run -p --rcfile="$COVERAGE_PROCESS_START" runtest.py test/ENV.py || if [[ $? == 2 ]]; then true; else false; fi; else $LINUXPYTHON runtest.py -j 2 test/ENV.py || if [[ $? == 2 ]]; then true; else false; fi; fi
+  - cmd: powershell -Command "& { if($env:COVERAGE -eq 1) { coverage run -p --rcfile=$($env:COVERAGE_PROCESS_START) runtest.py test/ENV.py} else { python runtest.py -j 2 test/ENV.py }; if($LastExitCode -eq 2 -Or $LastExitCode -eq 0) { $host.SetShouldExit(0 )} else {$host.SetShouldExit(1)}}"
+  - sh: if [ "$COVERAGE" -eq "1" ]; then coverage run -p --rcfile="$COVERAGE_PROCESS_START" runtest.py test/ENV.py || if [[ $? == 2 ]]; then true; else false; fi; else python runtest.py -j 2 test/ENV.py || if [[ $? == 2 ]]; then true; else false; fi; fi
 
 on_success:
   - cmd: if %COVERAGE% equ 1 coverage combine
