--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -33,7 +33,7 @@ install:
   - sh: python
   - sh: export PYSITEDIR=$(python -m site --user-site)
   - sh: python -m pip install -U pip setuptools wheel 
-  - sh: python -m pip install -U coverage==4.0.3 coveralls
+  - sh: python -m pip install -U coverage==4.0.3 coveralls codecov
   - sh: STATIC_DEPS=true & python -m pip install -U lxml
 
 environment:
@@ -127,6 +127,8 @@ on_success:
   - cmd: if %COVERAGE% equ 1 coverage combine
   - cmd: if %COVERAGE% equ 1 coverage report
   - cmd: if %COVERAGE% equ 1 coveralls --rcfile="%COVERAGE_PROCESS_START%"
+  - cmd: if %COVERAGE% equ 1 codecov -t %CODECOV_TOKEN%
   - sh: if [ "$COVERAGE" -eq "1" ]; then coverage combine; fi
   - sh: if [ "$COVERAGE" -eq "1" ]; then coverage report; fi
   - sh: if [ "$COVERAGE" -eq "1" ]; then coveralls --rcfile="$COVERAGE_PROCESS_START"; fi
+  - sh: if [ "$COVERAGE" -eq "1" ]; codecov -t $CODECOV_TOKEN; fi
