check environemnt on linux

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,7 +19,6 @@ install:
   - cmd: for /F "tokens=*" %%g in ('C:\\%WINPYTHON%\\python.exe -m site --user-base') do (set PYUSERBASESITE=%%g)
   - cmd: for /F "tokens=*" %%g in ('C:\\%WINPYTHON%\\python.exe -m site --user-site') do (set PYSITEDIR=%%g)
   - cmd: "set PATH=%PYUSERBASESITE%;%PYUSERBASESITE%\\%WINPYTHON%\\Scripts;%PYUSERBASESITE%\\Scripts;C:\\%WINPYTHON%;C:\\%WINPYTHON%\\Scripts;C:\\cygwin64\\bin;C:\\msys64;C:\\ProgramData\\chocolatey\\bin;%PATH%"
-  - cmd: set
   - cmd: "C:\\%WINPYTHON%\\python.exe -m pip install --user -U pip setuptools wheel"
   - cmd: "C:\\%WINPYTHON%\\python.exe -m pip install --user -U pypiwin32 coverage coveralls codecov"
   - cmd: set STATIC_DEPS=true & C:\\%WINPYTHON%\\python.exe -m pip install --user -U lxml
@@ -29,6 +28,7 @@ install:
   - cmd: choco install --allow-empty-checksums swig
   - cmd: choco install --allow-empty-checksums vswhere
   - cmd: choco install --allow-empty-checksums xsltproc
+  - cmd: set
   ### LINUX ###
   - sh: sudo add-apt-repository -y ppa:deadsnakes/ppa
   - sh: sudo apt-get update
@@ -42,6 +42,7 @@ install:
   - sh: python$PYTHON -m pip install --user -U coverage==4.0.3 coveralls codecov
   - sh: STATIC_DEPS=true & python$PYTHON -m pip install --user -U lxml
   - sh: ./.travis/install.sh
+  - sh: printenv
 
 
 environment:
